ACLOCAL_AMFLAGS = -I m4

# Build EHS library
lib_LTLIBRARIES = libehs.la

# Sources for building EHS library
libehs_la_SOURCES=ehs.cpp dynamicssllocking.cpp securesocket.cpp \
	socket.cpp sslerror.cpp staticssllocking.cpp datum.cpp \
	httpresponse.cpp httprequest.cpp formvalue.cpp

# headers to be installed with the library
pkginclude_HEADERS = ehs.h networkabstraction.h \
	datum.h httpresponse.h httprequest.h \
	ehstypes.h formvalue.h contentdisposition.h

noinst_HEADERS = config.h socket.h securesocket.h sslerror.h debug.h \
	staticssllocking.h dynamicssllocking.h threadabstractionlayer.h

# Sample programs to be built but not installed
noinst_PROGRAMS = ehs_formtest ehs_test ehs_testharness ehs_uploader \
				  ehs_simple ehs_mirror ehs_https

# Rules for building sample programs
ehs_formtest_SOURCES = samples/ehs_formtest.cpp
ehs_formtest_LDADD = libehs.la

ehs_test_SOURCES = samples/ehs_test.cpp
ehs_test_LDADD = libehs.la

ehs_testharness_SOURCES = samples/ehs_testharness.cpp
ehs_testharness_LDADD=libehs.la

ehs_uploader_SOURCES = samples/ehs_uploader.cpp
ehs_uploader_LDADD = libehs.la

ehs_simple_SOURCES = samples/ehs_simple.cpp
ehs_simple_LDADD = libehs.la

ehs_mirror_SOURCES = samples/ehs_mirror.cpp
ehs_mirror_LDADD = libehs.la

ehs_https_SOURCES = samples/ehs_https.cpp
ehs_https_LDADD = libehs.la

# Extra stuff to install 
EXTRA_DIST = ehs_development_guide.txt ehs-stress.pl building_for_windows.txt

# We want the maintainer-clean to REALLY remove anything that can be
# generated by running make -f Makefile.am
MAINTAINERCLEANFILES = aclocal.m4 config.h.in* configure Makefile.in \
	conf/missing conf/depcomp conf/ltmain.sh conf/install-sh \
	conf/config.sub conf/config.guess m4/lt~obsolete.m4 \
	m4/ltoptions.m4 m4/libtool.m4 m4/ltversion.m4 m4/ltsugar.m4

# Bootstrap target.
# After checkout from SVN, run make -f Makefile.am
bootstrap:
	autoreconf -if
