ACLOCAL_AMFLAGS = -I m4

# Build EHS library
lib_LTLIBRARIES = libehs.la
libehs_la_LDFLAGS = -no-undefined -version-number $(LIBVERSION)

# Sources for building EHS library
libehs_la_SOURCES=ehs.cpp dynamicssllocking.cpp securesocket.cpp \
	socket.cpp sslerror.cpp staticssllocking.cpp datum.cpp \
	httpresponse.cpp httprequest.cpp formvalue.cpp

# headers to be installed with the library
pkginclude_HEADERS = ehs.h networkabstraction.h \
	datum.h httpresponse.h httprequest.h \
	ehstypes.h formvalue.h contentdisposition.h

noinst_HEADERS = config.h socket.h securesocket.h sslerror.h debug.h \
	staticssllocking.h dynamicssllocking.h ehsconnection.h ehsserver.h \
	samples/btexception.h

# Sample programs to be built but not installed
noinst_PROGRAMS = ehs_formtest ehs_test ehs_testharness ehs_uploader \
				  ehs_simple ehs_mirror ehs_https ehs_privport \
				  ehs_exception bindhelper

# Rules for building sample programs
ehs_formtest_SOURCES = samples/ehs_formtest.cpp
ehs_formtest_LDADD = libehs.la

ehs_test_SOURCES = samples/ehs_test.cpp
ehs_test_LDADD = libehs.la

ehs_testharness_SOURCES = samples/ehs_testharness.cpp
ehs_testharness_LDADD=libehs.la

ehs_uploader_SOURCES = samples/ehs_uploader.cpp
ehs_uploader_LDADD = libehs.la

ehs_simple_SOURCES = samples/ehs_simple.cpp
ehs_simple_LDADD = libehs.la

ehs_mirror_SOURCES = samples/ehs_mirror.cpp
ehs_mirror_LDADD = libehs.la

ehs_https_SOURCES = samples/ehs_https.cpp
ehs_https_LDADD = libehs.la

ehs_privport_SOURCES = samples/ehs_privport.cpp
ehs_privport_LDADD = libehs.la

ehs_exception_SOURCES = samples/ehs_exception.cpp samples/btexception.cpp
ehs_exception_LDADD = libehs.la $(TRACELIBS)

bindhelper_SOURCES = samples/bindhelper.c

# Extra stuff to distribute in tarball 
EXTRA_DIST = $(DX_CONFIG) doc/html ehs_development_guide.txt ehs-stress.pl

# We want the maintainer-clean to REALLY remove anything that can be
# generated by running make -f Makefile.am
MAINTAINERCLEANFILES = aclocal.m4 config.h.in* configure Makefile.in \
	conf/missing conf/depcomp conf/ltmain.sh conf/install-sh \
	conf/config.sub conf/config.guess m4/lt~obsolete.m4 \
	m4/ltoptions.m4 m4/libtool.m4 m4/ltversion.m4 m4/ltsugar.m4

MOSTLYCLEANFILES = $(DX_CLEANFILES)

# Bootstrap target.
# After checkout from SVN, run make -f Makefile.am
bootstrap:
	autoreconf -if

doc: conf/doxygen.cfg doc/manual.dox doxygen-doc

dist-hook: doc

# Next ifdef is really tricky:
#  We want to be able to run make -f Makefile.am without having make
#  complaining with "missing separator" at the automake include line.
#  So we use GNUmake's conditional feature with a variable which is
#  always defined in the final Makefile but never defined in Makefile.am.
#  On the other hand, we don't want automake to complain about an unbalanced
#  endif, therefore we exploit GNUmakes's extended syntax which allows leading
#  spaces in conditional directives. This hides the endif from automake.
#
ifdef VERSION
include conf/aminclude.am
 endif
